--- a/memory-game/index.html
+++ b/memory-game/index.html
@@ -10,6 +10,7 @@
 
 <body>
     <h1>Memory Game</h1>
+    <div id="timer">10</div>
 
     <div class="MemoryGame">
         <div class="memory-card" data-card="🎄"></div>
