fixed maze bug. Fixed try-again ID problem. ID for maze-container fixed in CSS. Fixed border for #message in CSS

--- a/game_4_maze.html
+++ b/game_4_maze.html
@@ -20,7 +20,7 @@
     </div>
     <div id="message">
         <h2 id="message-text"></h2>
-        <button id="Try again" onclick="initGame ()">Try Again</button>
+        <button id="try-again" onclick="initGame ()">Try Again</button>
     </div>
 
 
