Added footer and its style

--- a/index.html
+++ b/index.html
@@ -101,6 +101,11 @@
             </div>
             
         </main>
+        
+        <!-- footer -->
+        <footer>
+            <p>Code Institute Hackathon 2025 | Created by Santa's Code Elves Team</p>
+        </footer>
 
     </div>
     <!-- Load JavaScript files -->
