--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="assests/css/style.css">
     <link rel="stylesheet" href="assests/css/game1-grinch.css">
     <link rel="stylesheet" href="assests/css/game2-memory.css">
+    <link rel="stylesheet" href="assests/css/game3-quiz.css">
+    <link rel="stylesheet" href="assests/css/game4-maze.css">
 
 </head>
 
@@ -66,7 +68,7 @@
                         <img src="assests/images/house1.png" alt="JS Jingle Bells" class="house-image">
                         <div class="house-status">🔒</div>
                     </div>
-                    <div class="house-name">JS Jingle Bells</div>
+                    <div class="house-name">Christmas Quizz</div>
                 </div>
 
                 <!-- House 4 -->
@@ -75,7 +77,7 @@
                         <img src="assests/images/house2.png" alt="HTML Holidays" class="house-image">
                         <div class="house-status">🔒</div>
                     </div>
-                    <div class="house-name">HTML Holidays</div>
+                    <div class="house-name">Maze</div>
                 </div>
             </div>
             <!-- Controls -->
@@ -122,6 +124,8 @@
     <script src="assests/js/script.js"></script>
     <script src="assests/js/game1-grinch.js"></script>
     <script src="assests/js/game2-memory.js"></script>
+    <script src="assests/js/game3-questions.js"></script>
+    <script src="assests/js/game4-maze.js"></script>
 </body>
 
 </html>
